# opencode-x

./: .gitignore  .prettierignore  AUDIT.md  BENCHMARK.md  INSTALL.md  MERGE.md  PLAN.md  bench-results.json  bench-spark-result.json  bench.mjs  flake.nix  package.json  turbo.json
.github/actions/setup-bun/: action.yml
.github/workflows/: ci.yml  native.yml  publish.yml  release.yml  sync-formula.yml  test.yml
.opencode/: opencode.jsonc
.opencode/agent/audit/: correctness.md  security.md  simplicity.md  wheelcheck.md
.opencode/mode/: auto.md
.opencode/skills/auto/: SKILL.md
Formula/: opencode.rb  opencodex.rb
natives/: Cargo.toml
natives/prompt-builder/: Cargo.toml
natives/prompt-builder/src/: lib.rs
natives/provider-proxy/: Cargo.toml
natives/provider-proxy/src/: lib.rs
natives/shared/: Cargo.toml
natives/shared/src/: lib.rs
natives/sqlite/: Cargo.toml
natives/sqlite/src/: lib.rs
natives/token-counter/: build.zig  build.zig.zon
natives/token-counter/script/: build.ts
natives/token-counter/src/: loader.ts  main.zig
natives/tool-exec/: Cargo.toml
natives/tool-exec/src/: lib.rs
nix/: node_modules.nix
phases/: 00-cleanup.md
script/: benchmark-comprehensive.ts  benchmark-native.ts  publish.ts  raw-changelog.ts  validate-e2e.ts
scripts/: bench.ts  dedupe-keymap.ts
