[package]
name = "opencode-x-provider-proxy"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi8", "tokio_rt"] }
napi-derive = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

[build-dependencies]
napi-build = "2"
