[package]
name = "opencode-x-tool-exec"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi8", "tokio_rt", "serde-json"] }
napi-derive = "3"
tokio = { version = "1", features = ["sync", "process", "time", "io-util", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
regex = "1"
futures = "0.3"

[build-dependencies]
napi-build = "2"
